Se anaden modelos, repositories y scheduler
-Se crea modelo de BD con sus respectivos repositories
-Se crea metodo que puebla las tablas Product y  Simulation con data inicial en una BD H2 en memoria.
-Se crea clase que disminuirá periódicamente los valores de sellin y price a traves de una expresión cron

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,23 @@
 server.port=8080
 
 ## DB Properties 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
-spring.jpa.hibernate.ddl-auto=create
+#spring.h2.console.settings.web-allow-others=false
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
+
+# Expresion CRON para indicar en que momento se ejecuta la
+# actualzacion de Sell-in y price
+# ejemplos
+	# Todos los dias a las 5:35 am: 35 5 * * * *
+	# cada 10 segundos: */10 * * * * *
+#cron.expression.initial=3000
+#cron.expression=*/30 * * * * *
+#cron.expression=35 5 * * * *
+cron.expression=*/10 * * * * *
