--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 server.port=8080
 
 ## DB Properties 
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
-#spring.h2.console.settings.web-allow-others=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 
 # Expresion CRON para indicar en que momento se ejecuta la
