Se corrigen errores en los controllers y se anaden validaciones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
@@ -18,7 +18,6 @@ spring.jpa.show-sql=false
 # ejemplos
 	# Todos los dias a las 5:35 am: 35 5 * * * *
 	# cada 10 segundos: */10 * * * * *
-#cron.expression.initial=3000
 #cron.expression=*/30 * * * * *
-#cron.expression=35 5 * * * *
-cron.expression=*/10 * * * * *
+cron.expression=35 5 * * * *
+#cron.expression=*/10 * * * * *
